@@ -3,6 +3,9 @@ fwknop-2.0.4 (09/20/2012):
       --disable-file-cache is used for the autoconf configure script.  This
       functionality was broken in be4193d734850fe60f14a26b547525ea0b9ce1e9
       through improper handling of #define macros from --disable-file-cache.
+    - [server] (Vlad Glagolev) Submitted a patch to fix command exec mode
+      under SPA message type validity test.  Support for command exec mode was
+      also added to the test suite.
 
 fwknop-2.0.3 (09/03/2012):
     - [server] Fernando Arnaboldi from IOActive found several DoS/code
